# monmon

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
packaging/homebrew-tap/: README.md
packaging/homebrew-tap/Formula/: monmon.rb
src/monmon/: __init__.py  __main__.py  app.py  power.py  procs.py
tests/: test_app.py  test_power.py  test_procs.py
tests/fixtures/: README.md  energy-keys.plist  m2pro-power-keys.plist  mac15-9-m3max-macos27.plist
