[project]
name = "monmon"
version = "0.1.0"
description = "macOS silicon monitor (E/P cores, GPU, NPU) with a TUI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gavi Narra", email = "gavi.narra@objectgraph.com" }]
keywords = ["macos", "apple-silicon", "monitor", "tui", "powermetrics", "gpu", "ane"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
]
dependencies = [
    "psutil>=7.2.2",
    "textual>=8.2.3",
]

[project.urls]
Homepage = "https://github.com/gavi/monmon"
Repository = "https://github.com/gavi/monmon"
Issues = "https://github.com/gavi/monmon/issues"

[project.scripts]
monmon = "monmon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monmon"]
