[project]
name = "monmon"
version = "0.3.0"
description = "macOS silicon monitor (E/P cores, GPU, NPU) with a TUI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gavi Narra", email = "gavi.narra@objectgraph.com" }]
keywords = ["macos", "apple-silicon", "monitor", "tui", "powermetrics", "gpu", "ane"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
]
dependencies = [
    "psutil>=7.2.2",
    "textual>=8.2.3",
]

[project.urls]
Homepage = "https://github.com/gavi/monmon"
Repository = "https://github.com/gavi/monmon"
Issues = "https://github.com/gavi/monmon/issues"

[project.scripts]
monmon = "monmon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monmon"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "types-psutil>=7.2.2.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["src/monmon", "tests"]
check_untyped_defs = true
